--- a/src/pages/subcategoria/subcategoria.scss
+++ b/src/pages/subcategoria/subcategoria.scss
@@ -9,8 +9,8 @@ page-subcategoria {
     align-items: center
   }
   .box {
-    width: 600px;
-    height: 600px;
+    width: 700px;
+    height: 100vh;
     background: #fff;
   }
   .titulo {
